opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/cpuid"
bug-reports: "https://github.com/janestreet/cpuid/issues"
dev-repo: "git+https://github.com/janestreet/cpuid.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/cpuid/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "core"
  "core_kernel"
  "ppx_jane"
  "dune"        {>= "2.0.0"}
]
synopsis: "A library for parsing CPU capabilities out of the `cpuid` instruction."
description: "
Supports a broad swath of Intel CPU capabilities and a more limited subset of AMD CPU
capabilities.
"
available: (arch = "x86_64" | arch = "arm64") & os = "linux"
