opam-version: "2.0"
version: "v0.16.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/janestreet_cpuid"
bug-reports: "https://github.com/janestreet/janestreet_cpuid/issues"
dev-repo: "git+https://github.com/janestreet/janestreet_cpuid.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/janestreet_cpuid/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"       {>= "4.14.0"}
  "core"        {>= "v0.16" & < "v0.17"}
  "core_kernel" {>= "v0.16" & < "v0.17"}
  "ppx_jane"    {>= "v0.16" & < "v0.17"}
  "dune"        {>= "2.0.0"}
]
synopsis: "A library for parsing CPU capabilities out of the `cpuid` instruction."
description: "
Supports a broad swath of Intel CPU capabilities and a more limited subset of AMD CPU
capabilities.
"
available: (arch = "x86_64" | arch = "arm64") & os = "linux"
